WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147390
[Cocoa] Font fallback is not language-sensitive
https://bugs.webkit.org/show_bug.cgi?id=147390
Summary
[Cocoa] Font fallback is not language-sensitive
Myles C. Maxfield
Reported
2015-07-28 17:16:42 PDT
Font fallback is not language-sensitive
Attachments
Patch
(10.04 KB, patch)
2015-07-28 17:18 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.03 KB, patch)
2015-07-28 17:20 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(12.64 KB, patch)
2015-07-30 15:08 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-mavericks
(1.33 MB, application/zip)
2015-07-30 17:44 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-mavericks-wk2
(1.28 MB, application/zip)
2015-07-30 17:59 PDT
,
Build Bot
no flags
Details
Patch
(10.63 KB, patch)
2015-07-30 20:17 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(12.21 KB, patch)
2015-07-30 21:41 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(9.73 KB, patch)
2015-07-30 22:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.85 KB, patch)
2015-07-31 21:13 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-mavericks
(1.13 MB, application/zip)
2015-07-31 21:48 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-mavericks-wk2
(1.56 MB, application/zip)
2015-07-31 22:15 PDT
,
Build Bot
no flags
Details
Patch
(73.55 KB, patch)
2015-08-01 15:06 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(74.25 KB, patch)
2015-08-01 15:18 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(74.55 KB, patch)
2015-08-06 21:40 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(11.14 KB, patch)
2015-08-07 14:35 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(9.53 KB, patch)
2015-11-11 20:16 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Flip the switch
(1.96 KB, patch)
2015-11-12 11:49 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(14)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-07-28 17:18:53 PDT
Created
attachment 257707
[details]
Patch
Myles C. Maxfield
Comment 2
2015-07-28 17:20:00 PDT
Created
attachment 257710
[details]
Patch
Myles C. Maxfield
Comment 3
2015-07-30 15:08:52 PDT
Created
attachment 257858
[details]
Patch
Dean Jackson
Comment 4
2015-07-30 15:44:41 PDT
Comment on
attachment 257858
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257858&action=review
> Source/WebCore/platform/graphics/Font.cpp:403 > + : localeHash(0) > + , character(0) > + , isForPlatformFont(false)
Use initializer syntax. (There probably is an official name for that term, but I don't know it)
> Source/WebCore/platform/graphics/Font.cpp:414 > + CharacterFallbackMapKey(WTF::HashTableDeletedValueType): character(hashTableDeletedChar()) { }
I think this should be split into four lines, and have whitespace after.
WebKit Commit Bot
Comment 5
2015-07-30 17:14:48 PDT
Attachment 257858
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/Font.cpp:414: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 6
2015-07-30 17:44:30 PDT
Comment on
attachment 257858
[details]
Patch
Attachment 257858
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/933
Number of test failures exceeded the failure limit.
Build Bot
Comment 7
2015-07-30 17:44:33 PDT
Created
attachment 257889
[details]
Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 8
2015-07-30 17:59:07 PDT
Comment on
attachment 257858
[details]
Patch
Attachment 257858
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/983
Number of test failures exceeded the failure limit.
Build Bot
Comment 9
2015-07-30 17:59:09 PDT
Created
attachment 257890
[details]
Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Myles C. Maxfield
Comment 10
2015-07-30 19:02:30 PDT
Comment on
attachment 257858
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257858&action=review
> Source/WebCore/platform/graphics/mac/FontCacheMac.mm:468 > + NSFont *substituteFont = CFBridgingRelease(CTFontCreateForCharactersWithLanguage(reinterpret_cast<CTFontRef>(nsFont), characters, length, language.get(), &coveredLength));
This returns unique pointers for the same font each time its called, which is causing us to get all messed up
Myles C. Maxfield
Comment 11
2015-07-30 20:17:33 PDT
Created
attachment 257896
[details]
Patch
Myles C. Maxfield
Comment 12
2015-07-30 20:59:53 PDT
Comment on
attachment 257896
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257896&action=review
> Source/WebCore/platform/graphics/mac/FontCacheMac.mm:475 > + RetainPtr<CFStringRef> fontString = adoptCF(CFURLGetString(fontURL.get()));
Whoops
Myles C. Maxfield
Comment 13
2015-07-30 21:41:53 PDT
Created
attachment 257898
[details]
Patch
Myles C. Maxfield
Comment 14
2015-07-30 22:29:03 PDT
Created
attachment 257901
[details]
Patch
Myles C. Maxfield
Comment 15
2015-07-31 21:13:59 PDT
Created
attachment 257992
[details]
Patch
Build Bot
Comment 16
2015-07-31 21:48:40 PDT
Comment on
attachment 257992
[details]
Patch
Attachment 257992
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/4955
New failing tests: css3/line-break/line-break-normal-sound-marks.html css3/line-break/line-break-strict-hyphens.html css3/line-break/line-break-loose-postfixes.html css3/line-break/line-break-auto-postfixes.html css3/line-break/line-break-strict-sound-marks.html css3/line-break/line-break-normal-postfixes.html css3/line-break/line-break-loose-sound-marks.html css3/line-break/line-break-strict-centered.html css3/line-break/line-break-loose-hyphens.html css3/line-break/line-break-normal-hyphens.html css3/line-break/line-break-normal-centered.html css3/line-break/line-break-loose-centered.html css3/line-break/line-break-auto-centered.html css3/line-break/line-break-strict-postfixes.html
Build Bot
Comment 17
2015-07-31 21:48:44 PDT
Created
attachment 257994
[details]
Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 18
2015-07-31 22:14:56 PDT
Comment on
attachment 257992
[details]
Patch
Attachment 257992
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5001
New failing tests: css3/line-break/line-break-normal-sound-marks.html css3/line-break/line-break-strict-hyphens.html css3/line-break/line-break-auto-postfixes.html css3/line-break/line-break-strict-sound-marks.html css3/line-break/line-break-normal-postfixes.html css3/line-break/line-break-loose-sound-marks.html css3/line-break/line-break-strict-centered.html css3/line-break/line-break-loose-hyphens.html css3/line-break/line-break-normal-centered.html css3/line-break/line-break-normal-hyphens.html css3/line-break/line-break-loose-postfixes.html css3/line-break/line-break-loose-centered.html css3/line-break/line-break-auto-centered.html css3/line-break/line-break-strict-postfixes.html
Build Bot
Comment 19
2015-07-31 22:15:00 PDT
Created
attachment 257996
[details]
Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Myles C. Maxfield
Comment 20
2015-08-01 15:06:58 PDT
Created
attachment 258021
[details]
Patch
Myles C. Maxfield
Comment 21
2015-08-01 15:18:32 PDT
Created
attachment 258023
[details]
Patch
Myles C. Maxfield
Comment 22
2015-08-01 17:48:57 PDT
Committed
r187729
: <
http://trac.webkit.org/changeset/187729
>
WebKit Commit Bot
Comment 23
2015-08-03 11:28:40 PDT
Re-opened since this is blocked by
bug 147575
Myles C. Maxfield
Comment 24
2015-08-06 21:40:46 PDT
Created
attachment 258451
[details]
Patch
Myles C. Maxfield
Comment 25
2015-08-07 14:35:12 PDT
Created
attachment 258529
[details]
Patch
Myles C. Maxfield
Comment 26
2015-08-07 14:50:00 PDT
Committed
r188167
: <
http://trac.webkit.org/changeset/188167
>
Alexey Proskuryakov
Comment 27
2015-08-07 15:36:21 PDT
fast/text/fallback-language-han.html fails on bots:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Ftext%2Ffallback-language-han.html
Myles C. Maxfield
Comment 28
2015-08-26 23:52:32 PDT
***
Bug 143788
has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 29
2015-11-11 20:11:12 PST
Rolled out in
r190754
Myles C. Maxfield
Comment 30
2015-11-11 20:16:25 PST
Created
attachment 265355
[details]
Patch
Myles C. Maxfield
Comment 31
2015-11-12 11:37:54 PST
Committed
r192372
: <
http://trac.webkit.org/changeset/192372
>
Myles C. Maxfield
Comment 32
2015-11-12 11:49:16 PST
Created
attachment 265415
[details]
Flip the switch
Myles C. Maxfield
Comment 33
2015-11-12 13:29:40 PST
Committed
r192382
: <
http://trac.webkit.org/changeset/192382
>
Darin Adler
Comment 34
2015-11-30 16:10:14 PST
Comment on
attachment 265355
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=265355&action=review
> Source/WebCore/platform/graphics/Font.cpp:432 > + hasher.add(key.locale.isNull() ? 0 : key.locale.impl()->existingHash());
Seems like we should add an existingHash function to String. This is really awkward for no good reason.
Myles C. Maxfield
Comment 35
2015-12-01 14:45:55 PST
Comment on
attachment 265355
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=265355&action=review
>> Source/WebCore/platform/graphics/Font.cpp:432 >> + hasher.add(key.locale.isNull() ? 0 : key.locale.impl()->existingHash()); > > Seems like we should add an existingHash function to String. This is really awkward for no good reason.
https://bugs.webkit.org/show_bug.cgi?id=151717
Myles C. Maxfield
Comment 36
2015-12-07 16:05:12 PST
Removing Mavericks-specific lines from platform/mac/TestExpecations due to no longer supporting Mavericks.
Myles C. Maxfield
Comment 37
2015-12-07 16:10:44 PST
Committed
r193663
: <
http://trac.webkit.org/changeset/193663
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug